[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/enemigosprite.png" type="Texture" id=1]
[ext_resource path="res://source/actor/enemy2.gd" type="Script" id=2]
[ext_resource path="res://audio/mymusic/bulletenemy.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/mymusic/bulletenemy2.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/mymusic/bulletenemy3.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 62.093, 36.2635 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 63.489, 36.2635 )

[node name="enemy" type="KinematicBody2D"]
position = Vector2( 322.173, 69.172 )
collision_layer = 2
collision_mask = 13
script = ExtResource( 2 )
rate_fire = 0.5
movimiento = 4
amplitud = 4

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -4.59619 )
shape = SubResource( 1 )

[node name="enemy" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4.59619 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 50.6935 )

[node name="bulletenemy" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="bulletenemy2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="bulletenemy3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true

[node name="Tween" type="Tween" parent="."]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
